v3-eks/manifests/08-frontend1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend1
  namespace: pathgate
spec:
  selector:
    app: frontend1
  ports:
    - port: 3000
      targetPort: 3000
